jenkinsci/springboot-jenkinsfile/blue-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-minikube-deployment-blue
spec:
  selector:
    matchLabels:
      app: springboot-minikube-blue
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: springboot-minikube-blue
        tier: backend
        version: green
    spec:
      containers:
        - name: springboot-minikube-blue-green-container
          image: springboot-minikube-blue-green-image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: springboot-minikube-service-blue
  labels:
    app: springboot-minikube-blue
    version: blue
spec:
  selector:
    app: springboot-minikube-green
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
  type: NodePort
