jenkinsci/springboot-jenkinsfile/blue-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-minikube-ingress-blue
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: springboot-minikube-service-blue
      port:
        number: 80
  rules:
    - host: springboot.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-minikube-service-blue
                port:
                  number: 80
